# TrueGraphDynamics

./: .gitattributes  .gitignore  README.md  pyproject.toml
ComentClassifier/: ComentClassifier.py  EmotionComentClassifierLLM.py
ComentClassifier/tests/: StupidClassifier.py  testEmotionComentClassifier.ipynb
Data/OriginalData/: df_for_train.csv  readme.md  silver_labels_Timestamp5_7.csv  truth_labels_fnn_gpt5.csv  truthsocial_features_new.csv  truthsocial_posts_analysis.csv  truthsocial_user_features.csv
Data/ProcessedData/: enriched_comments_emotions.tsv  network_modeling_data.csv  truth_cleand.csv  truth_labels_prefilterd_gpt5.csv
Preperation/: merge_data.ipynb
Preperation/Analyes/: follows_analysis.ipynb  truths_analysis.ipynb  user_analysis.ipynb
Preperation/BaslineClassifier/: StatmentClassifier .ipynb  TruthClassifier.ipynb
Preperation/Enrichment/: sentiment_enrichment-DESKTOP-Q7HVNIR.ipynb  sentiment_enrichment.ipynb
Temporal_Graph/: directed_graph.html  full_sweep_results.csv  graph_analysis-DESKTOP-Q7HVNIR.ipynb  graph_analysis.ipynb  overnight_results.csv  temporal_graph-DESKTOP-Q7HVNIR.py  temporal_graph.py  temporal_graph_for_training.py  temporal_truth_model.pt
Temporal_Graph/tmp/: best_model.pt  full_sweep_results.csv
final_paper/: bibliography.bib  final_paper.aux  final_paper.bbl  final_paper.blg  final_paper.out  final_paper.tex  final_paper.toc
latex/research_proposal/: references.bib  research_proposal.aux  research_proposal.bbl  research_proposal.blg  (+2 more)
notes/: emotion_classfied_examples.md  emotion_classfied_examples.txt
(+8 files in other folders)
