[project]
name = "truegraphdynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.3",
    "uv>=0.9.17",
]
